<resources>
    <string name="app_name">SharesApp</string>
    <string name="konto">Konto:</string>
    <string name="wertpapier">Wertpapier:</string>
    <string name="dir_geh_ren_folgende_wertpapiere">Dir gehören folgende Wertpapiere:</string>
    <string name="jahr">Jahr</string>
    <string name="woche">Woche</string>
    <string name="monat">Monat</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SharesApp</string>
    <string name="nav_header_subtitle">shares.app.de</string>
    <string name="nav_header_desc">App for Shares</string>
    <string name="action_settings">Settings</string>
    <string name="menu_depot">Depot</string>
    <string name="menu_aktien">Aktien</string>
    <string name="menu_historie">Historie</string>
    <string name="menu_erfolge">Erfolge</string>
    <string name="menu_newgame">NewGame</string>
    <string name="uebersicht">übersicht</string>
    <string name="statistik">statistik</string>
    <string name="portfolio">portfolio</string>
    <string name="oil">oil</string>
    <string name="us_market">us-market</string>
    <string name="etfs">etfs</string>
    <string name="capital_raise">capital-raise</string>
    <string name="fx">fx</string>
    <string name="funding">funding</string>
    <string name="bonds">bonds</string>
    <string name="zuruecksetzen">Zurücksetzen</string>
    <string name="willst_du_wirklich_deinen_kontostand_von">Willst du wirklich deinen Kontostand von:</string>
    <string name="zuruecksetzen_und_von_vorne_anfangen">zurücksetzen und von vorne anfangen?</string>
    <string name="fifty_euro">50€</string>
    <string name="bbb">BBB</string>
    <string name="tag">Tag</string>
    <string name="cash">Cash:</string>
    <string name="aktienwerte">Aktienwerte:</string>
    <string name="billanzsumme">Billanzsumme:</string>
    <string name="euro">€</string>
    <string name="menu_suche">Suche</string>
    <string name="such_kategorie">Suchkategorie:</string>
    <string name="deine_suche_ergab_folgende_treffer">Deine Suche ergab folgende Treffer:</string>
    <string name="deine_suche_ergab_keine_treffer">Deine Suche ergab keine Treffer.</string>
    <string name="suche">Suche</string>
    <string name="add_to_portfolio">Zu Portfolio hinzufügen</string>
    <string name="remove_from_portfolio">Aus Portfolio entfernen</string>
    <string name="leeres_portfolio">Es befinden sich momentan keine Wertpapiere in deinem Portfolio.</string>
    <string name="dir_geh_ren_momentan_keine_wertpapiere">Du besitzt momentan keine Wertpapiere.</string>
    <string name="prozent">Prozent</string>
    <string name="lade_preis">Lade Preis…</string>
    <string name="unbekannt">unbekannt</string>
    <string name="name">Name</string>
    <string name="symbol">Symbol</string>
    <string name="aktueller_kurs">Aktueller Kurs</string>
    <string name="zuletzt_aktualisiert">Zuletzt aktualisiert</string>
    <string name="type">Type</string>
    <string name="kaufen">Kaufen</string>
    <string name="verkaufen">Verkaufen</string>
    <string name="aktien_kaufen">Aktien kaufen</string>
    <string name="mein_geld">Mein Geld</string>
    <string name="kaufmenge">Kaufmenge</string>
    <string name="_0_00">0.00€</string>
    <string name="aktien_verkaufen">Aktien verkaufen</string>
    <string name="anzahl">Anzahl</string>
    <string name="preis_pro_st_ck">Preis pro Stück</string>
    <string name="verkaufmenge">Verkaufmenge</string>
    <string name="limit">Limit</string>
    <string name="gesamt_preis">Gesamt Preis</string>
    <string name="lade_inhalte">Lade Inhalte...</string>
    <string name="gesamtwert">Gesamtwert:</string>
    <string name="suche_nach_einem_begriff_um_suchergebnisse_zu_erhalten">Suche nach einem Begriff um Suchergebnisse zu erhalten.</string>
    <string name="du_hast_momentan_keine_kaufauftr_ge_erteilt">Du hast momentan keine Kaufaufträge erteilt.</string>
    <string name="du_hast_momentan_keine_verkaufauftr_ge_erteilt">Du hast momentan keine Verkaufaufträge erteilt.</string>
    <string name="menu_auftr_ge">Aufträge</string>
    <string name="verkaufauftr_ge">Verkaufaufträge</string>
    <string name="kaufauftr_ge">Kaufaufträge</string>
    <string name="l_sche_alle_auftr_ge">Lösche alle Aufträge</string>
    <string name="aktueller_preis">Aktueller Preis</string>
    <string name="kategorie">Kategorie</string>
    <string name="menge">Menge</string>
    <string name="verkaufauftrag">Verkaufauftrag</string>
    <string name="kaufauftrag">Kaufauftrag</string>
    <string name="firmenname">Firmenname</string>
    <string name="aktuelles_volumen">Aktuelles Volumen</string>
    <string name="vorheriger_schlie_preis">Vorheriger Schließpreis</string>
    <string name="vorheriger_er_ffnungspreis">Vorheriger Eröffnungspreis</string>
    <string name="h_chstpreis_heute">Höchstpreis (Heute)</string>
    <string name="zeit_h_chstpreis">Zeit Höchstpreis</string>
    <string name="tiefstpreis_heute">Tiefstpreis (Heute)</string>
    <string name="zeit_tiefstpreis">Zeit Tiefstpreis</string>
    <string name="_52_wochen_h_chstpreis">52 Wochen Höchstpreis</string>
    <string name="_52_wochen_tiefpreis">52 Wochen Tiefpreis</string>
    <string name="ffnungszeit">Öffnungszeit</string>
    <string name="schlie_zeit">Schließzeit</string>
    <string name="letzter_er_ffnungspreis">Letzter Eröffnungspreis</string>
    <string name="letzter_schlie_preis">Letzter Schließpreis</string>
    <string name="du_hast_noch_keine_aktien_gekauft_oder_verkauft">Du hast weniger als eine Aktie gekauft oder verkauft.</string>
    <string name="crypto">crypto</string>

</resources>
