<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_depot"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_depot" />
        <item
            android:id="@+id/nav_aktien"
            android:icon="@drawable/ic_dollar"
            android:title="@string/menu_aktien" />
        <item
            android:id="@+id/nav_historie"
            android:icon="@drawable/ic_clock"
            android:title="@string/menu_historie" />
        <item
            android:id="@+id/nav_erfolge"
            android:icon="@drawable/ic_achievements"
            android:title="@string/menu_erfolge" />
        <item
            android:id="@+id/nav_newgame"
            android:icon="@drawable/ic_newgame"
            android:title="@string/menu_newgame" />
    </group>

</menu>
