<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/fab_margin"
    android:layout_marginTop="@dimen/big_margin"
    android:layout_marginEnd="@dimen/fab_margin"
    android:layout_marginBottom="@dimen/big_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/willst_du_wirklich_deinen_kontostand_von"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/betrag_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifty_euro"
            android:textAlignment="center"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zuruecksetzen_und_von_vorne_anfangen"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="151dp"
            android:layout_height="56dp"
            android:background="@color/design_default_color_error"
            android:text="@string/zuruecksetzen" />

    </LinearLayout>
</LinearLayout>
